public/css/style.scss
/* ... */
/* line 441, style.scss */
.listing_details .share {
  float: right;
  display: block;
  margin-top: 15px;
  color: #4a4a4a;
  text-decoration: none;
}
/* line 447, style.scss */
.listing_details .share span {
  font-family: "open_sans_regular", sans-serif;
  margin-left: 7px;
  font-size: .8em;
}
/* line 453, style.scss */
.listing_details .listing_ng_title {
  float: left;
}
/* line 456, style.scss */
.listing_details .listing_overview {
  padding: 7px;
  border: 1px solid #dddddd;
  width: 641px;
}
/* line 460, style.scss */
.listing_details .listing_overview .listing_image {
  position: relative;
}
/* line 464, style.scss */
.listing_details .listing_overview .listing_image h3 {
  font-weight: 400;
  width: 100%;
  position: absolute;
  z-index: 9989;
  bottom: 0px;
  padding: 7px 100px 7px 7px;
  color: white;
  background: rgba(0, 0, 0, 0.25);
  margin: 0;
}
/* line 475, style.scss */
.listing_details .listing_overview .listing_image .favourite {
  position: absolute;
  bottom: 4px;
  max-width: 10%;
  text-decoration: none;
  text-align: right;
  font-size: 1.75em;
  top: auto;
  right: 0;
  padding-right: 15px;
  min-width: 100px;
  color: white;
  z-index: 9990;
  font-weight: 400;
  height: auto;
}
/* line 491, style.scss */
.listing_details .listing_overview .listing_image .favourite:before {
  color: #74b164;
  margin-right: 7px;
}
/* line 498, style.scss */
.listing_details .listing_overview .listing_view_controls ul {
  list-style: none;
  margin: 7px 0 -19px 0;
  padding: 0;
}
/* line 502, style.scss */
.listing_details .listing_overview .listing_view_controls ul:after {
  content: ' ';
  display: inline-block;
  width: 100%;
  height: 0;
}
/* line 508, style.scss */
.listing_details .listing_overview .listing_view_controls ul li {
  width: 32%;
}
/* line 510, style.scss */
.listing_details .listing_overview .listing_view_controls ul li a {
  color: white;
  background: #74b164;
  text-decoration: none;
  display: block;
  text-align: center;
  padding: 7px;
  border-radius: 7px;
  white-space: nowrap;
  overflow: hidden;
  transition: .2s;
}
/* line 521, style.scss */
.listing_details .listing_overview .listing_view_controls ul li a:hover {
  background: #5b964c;
  transition: .2s;
}
/* line 530, style.scss */
.listing_details table.listing_ng {
  background: #74b164;
  width: 100%;
  border: none;
  border-spacing: 1px;
}
/* line 535, style.scss */
.listing_details table.listing_ng tr {
  border: none;
  border-spacing: 1px;
}
/* line 538, style.scss */
.listing_details table.listing_ng tr td {
  border: none;
  background: white;
  width: 25%;
}
/* line 543, style.scss */
.listing_details table.listing_ng tr td.listing_ng_label {
  font-weight: 700;
}

.promoted, .promoted-small {
    background: url(../img/promoted_large.png);
    background-size: 100% 100%;
    color: white;
    display: block;
    height: 129px;
    left: 0px;
    position: absolute;
    top: 0px;
    width: 129px;
    z-index: 9999; }

.promoted-small {
    width: 100px;
    height: 100px; }



#share {
    height:30px;
    position: relative;
    display: block;
    padding: 5px;
    background: #74B164;
    color: white; }
#share ul {
    background: #74B164;
    top: 30px;
    left: 0px;
    width: 100%;
    z-index: 9999;
    position: absolute;
    display: none; }
#share:hover ul {
    display: block;
    list-style: none;
    padding: 0; }
#share:hover ul li i {
    display: inline-block;
    width: 15px;
    margin-right: 5px;
    text-align: center; }
#share:hover ul a {
    display: block;
    color: white;
    font-size: .8em;
    padding: 5px;
    text-decoration: none; }
#share:hover ul a:hover {
    background: #5b964c;
    color: #333333; }
#share:hover ul a:hover i {
    color: #333333; }


.errors {
    list-style: none;
    padding: 0;
    margin: 0 0 1em 0; }
.errors li {
    border: 1px solid #6f0b0b;
    display: block;
    width: 100%;
    padding: 0.5em;
    color: white;
    background: #9e0f0f; }




/* line 549, style.scss */
ul.justified {
  text-align: justify;
}
/* line 551, style.scss */
ul.justified li {
  display: inline-block;
}
/* line 554, style.scss */
ul.justified:after {
  content: ' ';
  display: inline-block;
  width: 100%;
  height: 0;
}

/* line 561, style.scss */
.ui-tooltip {
  box-shadow: none;
  color: white;
  font-size: .8em;
  padding-bottom: 14px;
  border: none;
  background: none;
}
/* line 568, style.scss */
.ui-tooltip:after {
  content: ' ';
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  position: relative;
  border-right: 7px solid transparent;
  border-top: 7px solid #74b164;
  font-size: 0;
  left: calc(50% - 7px);
  line-height: 0;
  display: block;
  margin-left: 27px;
}
/* line 582, style.scss */
.ui-tooltip > div {
  box-shadow: 0 0 10px black;
  padding: 7px;
  margin-left: 27px;
  border-radius: 7px;
  background: #74b164;
}

/* line 590, style.scss */
.listing_sidebar {
  float: right;
  border-top: 1px solid #dddddd;
  width: 332px;
}
/* line 595, style.scss */
.listing_sidebar .listing_rent h1 {
  text-align: center;
  font-size: 2.25em;
  margin: 0;
  border-bottom: 1px solid #dddddd;
  font-weight: 400;
}
/* line 603, style.scss */
.listing_sidebar .listing_rent h3 a {
  color: #4a4a4a;
  text-decoration: none;
}
/* line 608, style.scss */
.listing_sidebar .listing_rent > a {
  padding: 7px;
  border-radius: 7px;
  background: #74b164;
  color: white;
  text-decoration: none;
  text-align: center;
  display: block;
  transition: .2s;
}
/* line 617, style.scss */
.listing_sidebar .listing_rent > a:hover {
  background: #5b964c;
  transition: .2s;
}
/* line 622, style.scss */
.listing_sidebar .listing_rent ul.listing_contact {
  list-style: none;
  margin: 0;
  padding: 0;
}
/* line 626, style.scss */
.listing_sidebar .listing_rent ul.listing_contact li {
  margin-top: 7px;
}
/* line 628, style.scss */
.listing_sidebar .listing_rent ul.listing_contact li:first-child {
  margin-top: 0;
}
/* ... */

